# mcp-manager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  OLD_AGENTS.md  QUICKSTART.md  README.md  backend-error.txt  code-error.txt  docker-compose.override.yml  docker-compose.yml  frontend-error.txt  previous-session.txt
.agent-os/product/: mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/standards/: best-practices.md  code-style.md  tech-stack.md
backend/: .env.example  README.md  pyproject.toml
backend/database-backup-reference/: manual_indexes.sql  setup_database.py  setup_database_enhanced.py
backend/database-backup-reference/db/: __init__.py  database.py
backend/examples/: README.md  demo_gateway.py
backend/scripts/: db_performance_migration.py  docker-dev.sh  format.sh  lint.sh  modularize_models.py  setup.sh  test.sh  validate_config.py
backend/src/mcp_registry_gateway/: __init__.py  cli.py  demo.py  fastmcp_server.py  unified_app.py
backend/src/mcp_registry_gateway/api/: __init__.py  main.py  mcp_routes.py  schema_config.py
backend/src/mcp_registry_gateway/auth/: __init__.py  api_key_validator.py  azure_oauth_proxy.py  context.py  token_refresh.py  utils.py
backend/src/mcp_registry_gateway/core/: __init__.py  config.py  exceptions.py
backend/src/mcp_registry_gateway/db/: models.py
backend/src/mcp_registry_gateway/db/models/: __init__.py  audit.py  auth.py  base.py  better_auth.py  registry.py  routing.py  system.py  tenant.py
backend/src/mcp_registry_gateway/middleware/: __init__.py  audit.py  auth_middleware.py  base.py  error_handling.py  metrics.py  path_auth.py  rate_limit.py  tool_access.py  tracing.py
backend/src/mcp_registry_gateway/models/: __init__.py  responses.py
backend/src/mcp_registry_gateway/routing/: __init__.py  router.py
backend/src/mcp_registry_gateway/services/: __init__.py  proxy.py  registry.py
backend/src/mcp_registry_gateway/utils/: __init__.py  type_adapters.py  validation.py
backend/tests/: __init__.py  test_placeholder.py
docs/: DEVELOPMENT_SETUP.md  DEVELOPMENT_WORKFLOW.md  FRONTEND_STYLING.md
docs/ARCHIVED/: API_REFERENCE.md  AZURE_APP_REGISTRATION_GUIDE.md  AZURE_OAUTH_CONFIGURATION.md  CODE_PATTERNS.md  CODE_STANDARDS.md  COMMON_TASKS.md  CONFIGURATION_GUIDE.md  CORRECTED_AUTH_INTEGRATION_SUMMARY.md  DATABASE_PERFORMANCE_GUIDE.md  DEVELOPMENT_SETUP.md  DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_DIRECTORY_STANDARDIZATION.md  DOCUMENTATION_OPTIMIZATION_SUMMARY.md  ENHANCED_AUTH_ARCHITECTURE.md  ENHANCED_AUTH_IMPLEMENTATION_PLAN.md  ENHANCEMENT_IMPLEMENTATION_PLAN.md  FASTMCP_DOCUMENTATION_INDEX.md  FASTMCP_ENHANCEMENT_SUMMARY.md  FASTMCP_IMPLEMENTATION_VALIDATION.md  FASTMCP_INTEGRATION_PATTERNS.md  FASTMCP_TYPES_ENHANCEMENT_GUIDE.md  IMPLEMENTATION_STATUS.md  OPERATIONS_GUIDE.md  PERFORMANCE_TUNING_GUIDE.md  PRIORITY_1_ENHANCEMENTS_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  TESTING_GUIDE.md  TROUBLESHOOTING_GUIDE.md  UNIFIED_ARCHITECTURE_GUIDE.md  UNIFIED_CONFIGURATION_SETUP.md  fastmcp_web_docs.md
docs/agents/: agent-delegation.md  authentication-troubleshooting.md  azure-app-registration-guide.md  backend-development.md  docker-deployment.md  frontend-development.md  scalar-recursion-fix.md  security-configuration.md  tailwind-v4-guide.md  testing-quality.md
documentation/: Dockerfile  _coverpage.md  _navbar.md  _sidebar.md  docker-compose.yml  index.html
documentation/css/: app.css  base.css  content.css  copy-code-plugin.css  navbar.css  pagination-plugin.css  prismjs-plugin.css  search-plugin.css  sidebar.css  tabs-plugin.css  zoom-image-plugin.css
frontend/: .env.example  .env.production.example  .gitignore  .prettierignore  .prettierrc  drizzle.config.ts  eslint.config.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.d.ts
frontend/docs/: THEME_SYSTEM.md
frontend/drizzle/: 20250912211539_illegal_goblin_queen.sql  20250913061604_plain_exiles.sql  20250914031644_deep_crusher_hogan.sql  20250914045756_optimal_the_spike.sql  20250914180652_mixed_pet_avengers.sql  relations.ts  schema.ts
frontend/scripts/: reset-database.sh  test-better-auth-logger.ts
frontend/src/: env.ts  middleware.ts
frontend/tests/: README-better-auth-logger.md  README.md  SETUP_SUMMARY.md  api-key-integration.test.ts  db-optimization.test.ts  setup.ts
reports/: AGENTS_MD_RESTRUCTURE_VALIDATION_2025-09-12.md  BACKEND_PATH_ANALYSIS_2025-09-12.md  OLD_README.md  REFACTORING_REPORT_BACKEND_DIRECTORY_MIGRATION.md  add-server-implementation-plan.md  backend-circular-references-solution.md  better-auth-compatibility-validation.md  consolidated-drizzle-schema.ts  db-health.txt  documentation-structure-update.md  frontend-backend-database-comparison.md  frontend-database-analysis.md  logger-integration-redis.md  microsoft-entra-id-integration.md  missing-database-components-analysis.md  reset-database-analysis.md  scalar-integration-architecture-analysis.md
reports/ARCHIVED/: AGENTS_FULL_BACKUP  DOCUMENTATION_UPDATE_REPORT_2025-01-12.md  ENVIRONMENT_STANDARDIZATION_REPORT.md  MCP_REGISTRY_GATEWAY_STRUCTURE_ANALYSIS_2025-01-12.md  OLD_AGENTS.md  PRIORITY_1_ENHANCEMENT_VARIABLES_ANALYSIS.md  backend-circular-references-analysis.md  backend-database-analysis.md  backend-remediation-plan.md  backend-scripts-analysis.md  backend-startup-analysis.md  consolidated-drizzle-schema.md  dark-mode-shadow-guide.md  database-consolidation-executive-summary.md  database-setup-migration-analysis.md  db-health-success.txt  final-database-migration-plan.md  migration-documentation-review.md  migration-strategy.md  project-state-database-optimization-2025-09-13.md  recent-changes-summary.md  scalar-recursion-fix.md  sql-consolidation-analysis.md  sql-consolidation-completed.md
reports/backend-frontend-db-integration/: BETTER_AUTH_INTEGRATION_ANALYSIS.md  MODEL_MODULARIZATION_COMPLETE.md  frontend-backend-gap-analysis.md  migration-executive-summary-and-recommendations.md  (+1 more)
specs/: phase-1-server-registration-foundation.md
(+266 files in other folders)
